[project]
name = "evdschat"
version = "0.1.7"
description = "evdschat is an open-source Python package designed to enhance the evdspy package by allowing users to interact with the evdschat Application. This Node.js project aims to provide the most specific and accurate data users request during conversations, based on arguments such as start date, end date, and aggregation type, as described in the evdspy."
authors = [
    { name = "Sermet Pekin", email = "Sermet.Pekin@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["evdspy", "evdschat", "chatbot", "data-aggregation", "open-source", "Node.js", "Python", "API", "TCMB", "CBRT", "Generative AI"]


requires-python = ">=3.10"
dependencies = [
    "evdspy>=1.1.40",
    "pydantic>=2.9.1",
    "rich>=13.8.1",
]
[project.urls]
repository = "https://github.com/SermetPekin/evdschat"


[scripts]
evdschat = "evdschat:chat_console"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.6.4",
    "tox>=4.18.1",
]
